css/style.css
/* Learn about this solution to creating custom select styles:
 @link https://moderncss.dev/custom-select-styles-with-pure-css/ */
*,
*::before,
*::after {
  box-sizing: border-box;
}
select {
  // A reset of styles, including removing the default dropdown arrow
  appearance: none;
  -webkit-appearance: none;
-moz-appearance: none;
/* text-indent: 1px;
text-overflow: ''; */
  // Additional resets for further consistency
  background-color: transparent;
  border: none;
  padding: 0 1em 0 0;
  margin: 0;
  width: 100%;
  font-family: inherit;
  font-size: inherit;
  cursor: inherit;
  line-height: inherit;
}

select::-ms-expand {
  display: none;
}

select {
  // ...existing styles
  outline: none;
}

:root {
    --main-bg-color: #D9E9E9E9;
    --main-text-color: #494E6B;
    --taxa-1: #900C3F;
    --select-border: #777;
    --select-focus: blue;
    --select-arrow: var(--select-border);
}

/*
#continent-selector{
    position: absolute;
    right: 1%;
    align-items: right
} */
.select {
  width: 100%;
  /* min-width: 15ch;
  max-width: 30ch; */
  border: 1px solid var(--select-border);
  border-radius: 0.25em;
  padding: 0.25em 0.5em;
  font-size: 1.25rem;
  line-height: 1.1;

  // Stack above custom arrow
  z-index: 1;

  background-color: #fff;
  background-image: linear-gradient(to top, #f9f9f9, #fff 33%);
  display: grid;
  grid-template-areas: "select";
  grid-area: select;
  align-items: center;
  position: relative;
}

.select::after {
  content: "";
  width: 0.8em;
  height: 0.5em;
  background-color: var(--select-arrow);
  clip-path: polygon(100% 0%, 0 0%, 50% 100%);
  /* grid-area: select; */
  justify-self: end;
}

select,
&:after {
  grid-area: select;
}

select:focus + .focus {
  position: absolute;
  top: -1px;
  left: -1px;
  right: -1px;
  bottom: -1px;
  border: 2px solid var(--select-focus);
  border-radius: inherit;
}


#animation-section {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    align-content: flex-end;
    left: 10px
}

/* progress bar styling */

#animation-toolbox {
    left: 15px;
    position: fixed;
    width: 16%;
}

#animation-box {
    background: var(--main-bg-color);
    padding-bottom: 5px;
    padding-left: 10px;
}

#animation-header {
    color:var(--main-text-color);
    font-family: sans-serif;
    font-weight: 700;
}

.animation-rangebar {
    color:var(--main-text-color);
    font-family: sans-serif;
    font-weight: 300;
    font-size: 15px;
    margin-top: 5px;
    margin-bottom:5px
}

.taxa-content {
    font-weight: 500;
    color:var(--main-text-color);
}

/* li {
    display: flex;
    align-items: center;
    padding: 1px;
    font: 800
} */

/* .point-mark {
    margin-right: 4px;
} */
/* style="color:var(--main-text-color); font-family: roboto, sans-serif;
font-style: normal;
font-weight: 300;
font-size: 15px;
margin-top: 5px"


      style="color:var(--main-text-color);
      font-family: roboto, sans-serif;
      font-style: normal;
      font-weight: 300;
      font-size: 15px;
      margin-top: 5px
      margin-bottom: 5px;" */


      /* legend styling */

      /* #wraper-dropdown-selector {
          background-color: #d2eaef;
          opacity: 0.8;
          position: absolute;
          top: 10px;
          left: 30%;
          width: auto;
          height: auto;
          padding: 10px;
          display: block;
          z-index: 9000;

      } */

      /* #js-dropdown-selector input {
          width: 200px;
      } */


      #legend-box {
          position: fixed;
          right: 15px;
          bottom: 1px;
          height: 175px;
          width: 200px;
          font-family: sans-serif;
          background: var(--main-bg-color);
          opacity: 80%;
      }

      #legend-head-text {

          font-style: "heavy";
          font-weight: 700;
          text-align: center;
      }

      .legend .category {
        font: 800;
      }

      /* .legend-section {
          display: flex;
          flex-direction: column-reverse;
          /* justify-content: space-between;
          align-items: left;
          align-content: flex-end;
          width: 100%;
          height: 100%;
      } */

      #circ-box {
          width: 100%;
      }

      #circ-content {
          list-style-type:none;
          align-items: right;
          font-weight: 300;
          /* justify-content: center; */
          display: flex;
          flex-direction: column-reverse;
          text-align: right;
          padding-right: 10%
      }

      .circle {
          border-radius: 75%;
          position: absolute;
          border: 1px var(--main-text-color) solid;
          bottom: 10%;
          color: var(--main-text-color);
          background-color: 0.4
      }

      #circle100{
          left: 18px;
      }

      #circle50{
          left: 36px;
      }

      #circle25{
          left: 50px;
      }

      #logo-div {
          display: flex;
          margin-top:-1%;
          padding: 1px;
      }

      #neotoma-logo {
          position: fixed;
          width: 5%;
          width: 65px;
          height: 55px;
          right: 25px;
          bottom: 35px;
      }



/* taxa selection menu styling */

#menu {
    left: 15px;
    width:100px;
    top: 250px;
    position: fixed;
    background: var(--main-bg-color);
    z-index: 1;
    border-radius: 3px;
    width: 120px;
    /* border: 1px solid rgba(0, 0, 0, 0.4); */
    font-family: supria-sans, sans-serif;
    font-style: heavy;
    font-weight: 700;
    font-size: 13px;
    color: var(--main-text-color);
    box-shadow: 0 0px 16px rgba(0, 0, 0, 0.24);
    padding-top: 1%;
    display: block;
}

  #menu taxa.active {
    color: #f9f0e3;
  }

  /* The sidebar menu */
 #infoSideBar {
   height: 100%; /* 100% Full-height */
   width: 0; /* 0 width - change this with JavaScript */
   position: fixed; /* Stay in place */
   z-index: 1; /* Stay on top */
   top: 0;
   right: 0;
   padding-top: 10px;
   background-color: var(--main-bg-color); /* gray*/
   overflow-x: hidden; /* Disable horizontal scroll */
   transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
 }

 /* The sidebar links */
 #infoSideBar .closebtn {
   padding: 8px 8px 8px 20px;
   text-decoration: none;
   font-size: 20px;
   color: #818181;
   display: block;
   transition: 0.3s;
 }

 /* When you mouse over the navigation links, change their color */
 #infoSideBar .closebtn:hover {
   color: #f1f1f1;
 }

 /* Position and style the close button (top right corner) */
 #infoSideBar .closebtn {
   position: absolute;
   top: 0;
   right: 25px;
   font-size: 36px;
   margin-left: 50px;
 }

 /* The button used to open the sidebar */

 .openbtn {
     position: absolute;
     top: 15px;
     right: 15px;
     margin-left: 50px;
     border: none;
     height: 25px;
     width: 25px;
     font-size: 37px;
     color: var(--main-text-color);
     font: sans-serif;
     border-radius: 50%;
     display: flex;
 	 align-items: center;
 	 justify-content: center;
  }

  .openbtn:hover {
    background-color: #444;
  }

 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
 #main {
    color: var(--main-text-color);
   transition: margin-right .5s; /* If you want a transition effect */
 }

 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
   #infoSideBar {padding-top: 15px;}
   #infoSideBar a {font-size: 18px;}
 }

